# spdx-visualizer

./: .gitignore  Justfile  LICENSE  README.md  mermaid-config.json  pyproject.toml  viewer.html
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml
package/: pyproject.toml
package/src/: __init__.py  spdx_to_mermaid.py
package/tests/: __init__.py  test_spdx_to_mermaid.py
package/tests/assets/: flox-git.spdx.json  git-2.51.2.spdx.json  nix2sbom.spdx.json  syft_spdx.json
spdx-viewer/: .gitignore  Justfile  README.md
spdx-viewer/.flox/: env.json
spdx-viewer/.flox/env/: manifest.toml
src/: main.py  spdx_to_mermaid.py
